bugfix:fix context menu dark mode style

--- a/packages/easy-email-extensions/src/BlockLayer/components/ContextMenu/index.module.scss
+++ b/packages/easy-email-extensions/src/BlockLayer/components/ContextMenu/index.module.scss
@@ -3,8 +3,8 @@
   left: 500px;
   top: 200px;
   z-index: 9999;
-  background-color: #fff;
-  box-shadow: 1px 1px 4px rgb(0 0 0 / 30%);
+  background-color: var(--color-neutral-2);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
   font-family: 'Lato', sans-serif;
@@ -16,7 +16,7 @@
     flex-wrap: nowrap;
     cursor: default !important;
     &:hover {
-      background-color: rgba(0,0,0,0.1);
+      background-color: var(--color-menu-dark-hover);
     }
   }
 }
